// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`At-rules @font-face renders and returns family name 1`] = `"@font-face {font-family: \\"Open Sans\\"; font-style: normal; font-weight: 800; src: url(\\"fonts/OpenSans-Bold.woff2\\");}"`;

exports[`At-rules @import renders all variants 1`] = `"@import url(print.css) print;@import url(a11y.css) speech;@import url(custom.css);@import url(chrome://communicator/skin);@import url(common.css) screen;@import url(landscape.css) screen and (orientation: landscape);"`;

exports[`At-rules @keyframes can provide a custom animation name 1`] = `
"@keyframes fade { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}"
`;

exports[`At-rules @keyframes renders percentage based and returns animation name 1`] = `
"@keyframes kf22exw8 { 
  0% {top: 0; left: 0;} 
  30% {top: 50px;} 
  68%,72% {left: 50px;} 
  100% {top: 100px; left: 100%;} 
}"
`;

exports[`At-rules @keyframes renders range based and returns animation name 1`] = `
"@keyframes kf103rcyx { 
  from {transform: translateX(0%);} 
  to {transform: translateX(100%);} 
}"
`;

exports[`At-rules @keyframes supports ltr and rtl 1`] = `
"@keyframes kf1lt4056 { 
  from {left: 0;} 
  to {right: 100px;} 
}@keyframes kf944ipm { 
  from {right: 0;} 
  to {left: 100px;} 
}"
`;

exports[`At-rules doesnt insert the same at-rule more than once 1`] = `
"@font-face {font-family: \\"Open Sans\\"; font-style: normal; font-weight: 800; src: url(\\"fonts/OpenSans-Bold.woff2\\");}@keyframes kf103rcyx { 
  from {transform: translateX(0%);} 
  to {transform: translateX(100%);} 
}"
`;

exports[`At-rules inserts at-rules before standard rules 1`] = `"@font-face {font-family: \\"Open Sans\\"; font-style: normal; font-weight: 800; src: url(\\"fonts/OpenSans-Bold.woff2\\");}.a {display: block;}"`;
